suppressed warnings and deleted unused things